environments/dev/us-east-1/gitops/manifests/default/bookinfo/istio/authorization_policy/book_info_auth_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: reviews-authz
  namespace: default
spec:
  selector:
    matchLabels:
      app: reviews
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - cluster.local/ns/default/sa/bookinfo-productpage
    to:
    - operation:
        methods:
          - GET
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: details-authz
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - cluster.local/ns/default/sa/bookinfo-productpage
    to:
    - operation:
        methods:
          - GET
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ratings-authz
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - cluster.local/ns/default/sa/bookinfo-productpage
          - cluster.local/ns/default/sa/bookinfo-reviews
    to:
    - operation:
        methods:
          - GET
# ---
# apiVersion: security.istio.io/v1
# kind: AuthorizationPolicy
# metadata:
#   name: productpage-authz
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       app: productpage
#   action: ALLOW
#   rules:
#   - from:
#     - source:
#         principals:
#           - cluster.local/ns/istio-system/sa/istio-ingress
#     to:
#     - operation:
#         methods:
#           - GET
